# api/api.go
@@ -14,7 +14,7 @@ import (
 // @tite Voting service
 // @version 1.0
 // @description Voting service
-// @host localhost:8080
+// @host localhost:8081
 // @BasePath /
 // @securityDefinitions.apikey BearerAuth
 // @in header
@@ -29,7 +29,7 @@ func NewGin(h *handler.Handler) *gin.Engine {
 	u := r.Group("/user")
 	u.POST("/create", h.RegisterUser)
 	u.PUT("/update/:id", h.UpdateUser)
-	u.DELETE("/delete/:id")
+	u.DELETE("/delete/:id", h.DeleteUser)
 	u.GET("/getall", h.GetAllUser)
 	u.GET("/getbyid/:id", h.GetbyIdUser)
 	u.POST("/login", h.LoginUser)
